# tears

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  spelling.yml
examples/: counter.rs  http_todo.rs  signals.rs  views.rs  websocket.rs
scripts/: README.md  analyze_flamegraph.sh  compare_flamegraphs.sh
src/: application.rs  command.rs  lib.rs  prelude.rs  runtime.rs  subscription.rs
src/subscription/: http.rs  mock.rs  signal.rs  terminal.rs  time.rs  websocket.rs
src/subscription/http/: cache.rs  config.rs  mutation.rs  query.rs
tests/: dynamic_subscriptions.rs  quit_handling.rs  runtime_run.rs
