[package]
name = "tears"
version = "0.1.0"
edition = "2024"
authors = ["Akiomi Kamakura <akiomik@gmail.com>"]
description = "A simple and elegant framework for building TUI applications using The Elm Architecture (TEA)"
documentation = "https://docs.rs/tears"
homepage = "https://github.com/akiomik/tears"
repository = "https://github.com/akiomik/tears"
license = "Apache-2.0"
readme = "README.md"
keywords = ["tui", "tea", "elm-architecture", "ratatui", "framework"]
categories = ["command-line-interface", "asynchronous"]
rust-version = "1.85.0"
exclude = [
    ".github/",
    ".gitignore",
    "justfile",
    ".*.md",
    "tmp*",
    "Cargo.lock",
]

[dependencies]
color-eyre = "0.6"
crossterm = { version = "0.29", features = ["serde", "event-stream"] }
futures = "0.3"
ratatui = { version = "0.29", features = ["serde", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

[lints.clippy]
# Pedantic lints for high code quality
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict for a library
module_name_repetitions = "allow"

# Enforce important correctness lints
unwrap_used = "warn"
expect_used = "allow"
panic = "warn"

# Allow similar names in tests (e.g., id_i32, id_u64)
similar_names = "allow"
